--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
     "uuid": "^8.3.2",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
