--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.0",
     "detect-client-ip": "^1.0.3",
     "firebase": "^8.2.0",
@@ -14,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
+    "typewriter-effect": "^2.17.0",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "webfontloader": "^1.6.28"
