--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "detect-client-ip": "^1.0.3",
     "firebase": "^8.2.0",
     "firebase-tools": "^8.19.0",
+    "node-sass": "4.14.1",
     "public-ip": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-reveal": "^1.2.2",
