--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "@testing-library/user-event": "^12.5.0",
     "animate.css": "^4.1.1",
     "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
     "detect-client-ip": "^1.0.3",
     "firebase": "^8.2.0",
     "firebase-tools": "^8.19.0",
     "node-sass": "4.14.1",
     "public-ip": "^4.0.3",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-reveal": "^1.2.2",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "typewriter-effect": "^2.17.0",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
